objects/BMCServiceDesk__SRM_RequestDefinition__c.object
<CustomObject>
    <description>Stores the service request definitions created by a system administrator.</description>
    <fields>
        <fullName>BMCServiceDesk__AllAccounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ApprovalRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CostOption1__c</fullName>
        <label>Cost Option1</label>
        <picklist>
            <picklistValues>
                <fullName>Named User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adapter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concurrent user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage in GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage in TB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CostOption2__c</fullName>
        <label>Cost Option2</label>
        <picklist>
            <picklistValues>
                <fullName>Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CurrencyType__c</fullName>
        <label>Currency Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CurrentDate__c</fullName>
        <formula>NOW()</formula>
        <label>CurrentDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CustomerPrice__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DeliveryCost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Description_Rich_Text__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <description>Stores the description of Request Definition.</description>
        <inlineHelpText>Use this field to enter a description of the Request Definition.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Export__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used tagging service request for exporting from RF SRD Migration package.</description>
        <inlineHelpText>Select this field to allow the record to be exported from the RF SRD Migration Pentaho package.</inlineHelpText>
        <label>Tag for Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKBusinessService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Request Definitions</relationshipLabel>
        <relationshipName>Request_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>BMCServiceDesk__Category__c</referenceTo>
        <relationshipLabel>Request Definitions</relationshipLabel>
        <relationshipName>Request_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKContentImport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field forms a relationship between the Content Import object and the records imported in the Base Element, Request Definition, Template, Category, and Agreement objects. This field helps in tracking the imported record in the respective objects.</description>
        <label>Content Import</label>
        <referenceTo>BMCServiceDesk__ContentImport__c</referenceTo>
        <relationshipLabel>Request Definitions</relationshipLabel>
        <relationshipName>Request_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKLookupFilter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup Filter</label>
        <referenceTo>BMCServiceDesk__LookupFilter__c</referenceTo>
        <relationshipLabel>Request Definitions</relationshipLabel>
        <relationshipName>Request_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKServiceOffering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Offering</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Request Definitions (Service Offering)</relationshipLabel>
        <relationshipName>Request_Definitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Image__c</fullName>
        <label>Image (32x32)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this check box to make the service request available on Mobile App.</inlineHelpText>
        <label>Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Online__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this check box to make the service request available in Self Service.</inlineHelpText>
        <label>Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Prefix_Prompt_to_user_input__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this check box to prefix the Prompt/Question to user input mapped to Text Area or Long Text Area output fields.</inlineHelpText>
        <label>Prefix the Prompt/Question to user input</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PriceOption1__c</fullName>
        <label>Price Option1</label>
        <picklist>
            <picklistValues>
                <fullName>Named User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adapter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concurrent user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage in GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage in TB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PriceOption2__c</fullName>
        <label>Price Option2</label>
        <picklist>
            <picklistValues>
                <fullName>Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Profiles__c</fullName>
        <label>Profile</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ProvideInformation__c</fullName>
        <inlineHelpText>Provide Information</inlineHelpText>
        <label>Provide Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ReviewService__c</fullName>
        <label>Review a Service</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SRDUrl__c</fullName>
        <inlineHelpText>Use this field to enter a URL that provides more information</inlineHelpText>
        <label>URL for More Information</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SelfService_Display_Order__c</fullName>
        <label>SelfService Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Set_Execution_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Set Execution Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TurnaroundTime__c</fullName>
        <label>Turnaround Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UnderReview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not selected by default. When the field is not selected, the imported records (records imported by using the Content Management tile) can be accessed by the system administrator only. The value of the field is set to True when the imported records are deployed to be accessed by users.</description>
        <label>Under Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UserInstructions__c</fullName>
        <label>User Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ViewRequest__c</fullName>
        <label>View a Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__serviceRequestTitle__c</fullName>
        <label>Service Request Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Request Definition</label>
    <nameField>
        <label>Request Definition</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__endDateMustBeAfterStartDate</fullName>
        <active>true</active>
        <description>End date must come after Start Date</description>
        <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__EndDate__c),ISBLANK(BMCServiceDesk__EndDate__c) ) ), BMCServiceDesk__EndDate__c &lt; BMCServiceDesk__StartDate__c  )</errorConditionFormula>
        <errorMessage>The End Date must be later than the Start Date</errorMessage>
    </validationRules>
</CustomObject>